# cpp-projects

./: .gitignore  CMakeLists.txt
01-Counting/: CMakeLists.txt  StateMachine.h  main.cpp
02-MacroProcessor/: CMakeLists.txt  MacroProcessor.cpp  MacroProcessor.h  main.cpp
03-ImprovedMacroProcessor/: CMakeLists.txt  MacroProcessor.cpp  MacroProcessor.h  StateMachine.h  main.cpp
03-PolymorphicSort/: CMakeLists.txt  main.cpp
04-TokenMacroProcessor/: CMakeLists.txt  MacroProcessor.cpp  MacroProcessor.h  main.cpp
04-Units/: CMakeLists.txt  main.cpp  static_vector.h  test4.cpp  units.h
05-TaskScheduler/: CMakeLists.txt  example.cpp  priority_scheduler.hpp
06-StaticRanges/: CMakeLists.txt  static_for_test_1.cpp  static_for_test_concepts.cpp  static_for_test_static_iota_view.cpp  static_for_test_to.cpp  static_ranges.hpp
06-TaskSchedulerV2/: CMakeLists.txt  example.cpp  priority_scheduler.hpp
